--- a/styles/style.css
+++ b/styles/style.css
@@ -249,3 +249,19 @@ height: 33px;
         max-width: 90%;
     }
 }
+
+.wrapper__container{
+width: 430px;
+height: 330px;
+position: relative;
+background: #FFFFFF;
+box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+border-radius: 10px;
+}
+.Forms__title{
+    font-weight: 900;
+    font-size: 24px;
+    line-height: 29px;
+    margin: 34px 36px 0px;
+    color: #000000;
+}
