--- a/styles/style.css
+++ b/styles/style.css
@@ -258,10 +258,28 @@ background: #FFFFFF;
 box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
 border-radius: 10px;
 }
-.Forms__title{
+.wrapper__close-btn{
+    cursor: pointer;
+    background: url(/images/Close-Icon.png) center center;
+    height: 48px;
+    width: 48px;
+    padding: 0;
+    border: none;
+    position: absolute;
+    top: -43px;
+    right: -43px;
+    transition: opacity 0.3s ease-in-out; 
+}
+.form__title{
     font-weight: 900;
     font-size: 24px;
     line-height: 29px;
     margin: 34px 36px 0px;
     color: #000000;
+}
+.Form{
+    width:calc (100%-36px);
+    display: flex;
+    flex-direction: column;
+    margin: 0px auto;
 }
