--- a/blocks/wrapper/__close-btn/wrapper__close-btn.css
+++ b/blocks/wrapper/__close-btn/wrapper__close-btn.css
@@ -1,5 +1,5 @@
 .wrapper__close-btn {
-    background: url(/images/Close-Icon.png) center center;
+    background: url(/./images/Close-Icon.png.png) center center;
     height: 48px;
     width: 48px;
     padding: 0;
