--- a/blocks/form/__submit-btn/form__submit-btn.css
+++ b/blocks/form/__submit-btn/form__submit-btn.css
@@ -11,3 +11,14 @@
     font-size: 18px;
     line-height: 1.22;
 }
+.form__submit-btn:hover{
+    opacity: 0.8;
+    transition: 0.3s;
+} 
+@media screen and (max-width: 580px) {
+    .form__submit-btn {
+        font-size: 14px;
+        line-height: 17px;
+    }
+    
+}
