--- a/blocks/form/__title/form__title.css
+++ b/blocks/form/__title/form__title.css
@@ -6,3 +6,11 @@
     line-height: 29px;
     color: #000;
 }
+@media screen and (max-width: 580px) {
+    .form__title{
+        font-size: 18px;
+        line-height: 22px;
+
+    }
+
+}
