--- a/blocks/modal/__container/modal__container.css
+++ b/blocks/modal/__container/modal__container.css
@@ -1,4 +1,4 @@
-.wrapper__container {
+.modal__container{
     position: relative;
     max-width: 430px;
     min-height: 330px;
@@ -6,5 +6,12 @@
     width: 100%;
     background-color: #fff;
     border-radius: 10px;
-    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+}
+@media screen and (max-width: 580px) {
+    .modal__container{
+        max-width: 90%;
+        width: 282px;
+        height: 322px;
+    }
+
 }
