--- a/pages/style.css
+++ b/pages/style.css
@@ -26,8 +26,10 @@
 @import url(..//blocks/footer/footer.css);
 @import url(..//blocks/footer/__copyright/footer__copyright.css);
 
-@import url(..//blocks/wrapper/__container/wrapper__container.css);
-@import url(..//blocks/wrapper/__close-btn/wrapper__close-btn.css);
+@import url(..//blocks/modal/modal.css);
+@import url(..//blocks/modal/__opned/modal__opend.css);
+@import url(..//blocks/modal/__container/modal__container.css);
+@import url(..//blocks/modal/__close-btn/modal__close-btn.css);
 @import url(..//blocks/form/form.css);
 @import url(..//blocks/form/__title/form__title.css);
 @import url(..//blocks/form/__text-input/form__text-input.css);
