--- a/blocks/modal/__close-btn/modal__close-btn.css
+++ b/blocks/modal/__close-btn/modal__close-btn.css
@@ -4,10 +4,13 @@
     padding: 0;
     border: none;
     position: absolute;
-    top: -45px;
-    right: -45px;
+    top: -46px;
+    right: -46px;
     cursor: pointer;
     background-color: transparent;
+    background-image: url(./Close-Icon.svg);
+    background-position: center;
+    background-repeat: no-repeat;
 }
 .modal__close-btn:hover {
     opacity: 0.6;
@@ -15,7 +18,7 @@
 }
 @media screen and (max-width: 580px) {
     .modal__close-btn {
-        right: -5px;
+        right: 5px;
         height: 26px;
         width: 26px;
     }
