--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -6,4 +6,8 @@
     margin: 25px 0px 31px 21px;
     padding: 0;
     color: #000000;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 220px; 
 }
