--- a/blocks/modal/__container/modal__container.css
+++ b/blocks/modal/__container/modal__container.css
@@ -1,17 +1,16 @@
 .modal__container{
     position: relative;
     max-width: 430px;
-    min-height: 330px;
-    margin-top: 195px;
     width: 100%;
     background-color: #fff;
     border-radius: 10px;
+    padding-bottom: 35px;
 }
 @media screen and (max-width: 580px) {
     .modal__container{
         max-width: 90%;
         width: 282px;
-        height: 322px;
+        padding-bottom: 25px;
     }
 
 }
