--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -7,21 +7,16 @@
     border: 1px solid white;
     cursor: pointer;
     background-color: transparent;
+    background-image: url(/images/Edit-button.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    
 }
 .profile__edit-btn:hover {
     opacity: 0.6;
     transition: 0.2s;
 }
-@media screen and (max-width: 580px) {
 
-    .profile__edit-btn {
-        width: 18px;
-        height: 18px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-}
 @media screen and (max-width: 765px) {
 
     .profile__edit-btn {
