--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -4,16 +4,11 @@
     line-height: 22px;
     margin: 0px;
     max-width: 300px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
-@media screen and (max-width: 580px) {
 
-    .profile__job {
-        font-size: 14px;
-        max-width: 200px;
-        margin: 0 auto;
-        text-align: center;
-    }
-}
 @media screen and (max-width: 765px) {
 
     .profile__job {
