--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -2,18 +2,13 @@
     font-weight: 500;
     font-size: 42px;
     line-height: 48px;
+    margin: 0px;
     text-overflow: ellipsis;
     white-space: nowrap;
-    max-width: 400px;
-    margin: 0px;
+    overflow: hidden;
+    max-width: 373px; 
 }
-@media screen and (max-width: 580px) {
-    .profile__title {
-        font-size: 22px;
-        line-height: 1.2;
-        max-width: 300px;
-    }
-}
+
 @media screen and (max-width: 765px) {
     .profile__title {
         font-size: 22px;
