--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -8,7 +8,7 @@
     margin-left: auto;
     margin-bottom: 7px;
     background-color: transparent;
-    background-image: url(/images/Add-button.svg);
+    background-image: url(../__add-btn/Add-button.svg);
     background-repeat: no-repeat;
     background-position: center;
     cursor: pointer;
