--- a/blocks/modal/__container/modal__container.css
+++ b/blocks/modal/__container/modal__container.css
@@ -3,6 +3,7 @@
     max-width: 430px;
     width: 100%;
     background-color: #fff;
+    border: none;
     border-radius: 10px;
     padding-bottom: 35px;
 }
