--- a/blocks/element/__like-btn/element__like-btn.css
+++ b/blocks/element/__like-btn/element__like-btn.css
@@ -2,6 +2,7 @@
     margin-right: 18px;
     background-color: transparent;
     border: none;
+    cursor: pointer;
     
 }
 .element__like-btn:hover {
