--- a/blocks/form/__text-input/form__text-input.css
+++ b/blocks/form/__text-input/form__text-input.css
@@ -2,6 +2,7 @@
     padding: 0 0 13px;
     background-color: transparent;
     border: none;
+    border-radius: 0px;
     border-bottom: 1px solid rgba(84, 84, 84, 0.2);
     color: #000;
     font-style: normal;
