before popup img

--- a/blocks/element/__like-btn/element__like-btn.css
+++ b/blocks/element/__like-btn/element__like-btn.css
@@ -3,13 +3,10 @@
     background-color: transparent;
     border: none;
     cursor: pointer; 
+    height: 19px;
+    width: 21px;
 }
 .element__like-btn:hover {
     opacity: 0.5;
     transition: 0.2s;
-}
-.element__like-btn:active{
-    background-image: url(./black-like.svg);
-    background-position: center;
-    background-repeat: no-repeat;
 }
