--- a/blocks/modal/__container/modal__container.css
+++ b/blocks/modal/__container/modal__container.css
@@ -6,6 +6,7 @@
     border: none;
     border-radius: 10px;
     padding-bottom: 35px;
+    transition: visibility 0.5, opacity 0.1s, linear 0.1s;
 }
 @media screen and (max-width: 580px) {
     .modal__container{
