--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,4 +1,10 @@
 .element__image {
     display: block;
     width: 100%;
+    height:282px; 
+    object-fit: cover;
+    object-position: bottom;
+    width: 100%;
+    border-radius: 10px 10px 0px 0px;
+    cursor: pointer;
 }
