--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -8,4 +8,5 @@
     justify-content: center;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.5);
+    transition: visibility 0.5, opacity 0.1s, linear 0.1s;
 }
