only transition left

--- a/blocks/element/__like-btn/element__like-btn.css
+++ b/blocks/element/__like-btn/element__like-btn.css
@@ -1,10 +1,10 @@
 .element__like-btn {
+    align-self: center;
     margin-right: 18px;
     background-color: transparent;
     border: none;
     cursor: pointer; 
-    height: 19px;
-    width: 21px;
+
 }
 .element__like-btn:hover {
     opacity: 0.5;
