--- a/blocks/element/__like-btn/_active/element__like-btn_active.css
+++ b/blocks/element/__like-btn/_active/element__like-btn_active.css
@@ -1,3 +1,6 @@
 .element__like-btn_active{
     background-image: url(../black-like.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+  
 }
