--- a/blocks/modal/_closed/modal_closed.css
+++ b/blocks/modal/_closed/modal_closed.css
@@ -1,3 +1,6 @@
 .modal_closed {
     display: none;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0.5s, opacity 0.5s ease-in-out;
 }
