--- a/pages/index.css
+++ b/pages/index.css
@@ -31,10 +31,13 @@
 @import url(..//blocks/modal/_closed/modal_closed.css);
 @import url(..//blocks/modal/__container/modal__container.css);
 @import url(..//blocks/modal/__close-btn/modal__close-btn.css);
+@import url(..//blocks/modal/__close-btn/modal__close_type_popup.css);
 @import url(..//blocks/form/form.css);
 @import url(..//blocks/form/__title/form__title.css);
 @import url(..//blocks/form/__text-input/form__text-input.css);
 @import url(..//blocks/form/__submit-btn/form__submit-btn.css);
 @import url(..//blocks/form/__fieldset/form__fieldset.css);
-
+@import url(..//blocks/modal/__container/modal__container_type_popup.css);
+@import url(..//blocks/modal/__image/pop-up__img.css);
+@import url(..//blocks/modal/__pop-up/pop-up__title.css);
 
