--- a/pages/index.css
+++ b/pages/index.css
@@ -2,7 +2,6 @@
 
 @import url(..//vendor/fonts/fonts.css);
 
-
 @import url(..//blocks/page/page.css);
 @import url(..//blocks/page/__container/page__container.css);
 @import url(..//blocks/header/header.css);
@@ -40,4 +39,6 @@
 @import url(..//blocks/modal/__container/modal__container_type_popup.css);
 @import url(..//blocks/modal/__image/pop-up__img.css);
 @import url(..//blocks/modal/__pop-up/pop-up__title.css);
-
+@import url(../blocks/form/__text-input/_theme/input_theme_error.css);
+@import url(..//blocks/form/__submit-btn/_disabled/form__submit-btn_disabled.css);
+@import url(..//blocks/form/__text-input/_theme/_error/form__text-input_theme_error.css);
