ready after repairs

--- a/blocks/modal/_closed/modal_closed.css
+++ b/blocks/modal/_closed/modal_closed.css
@@ -1,6 +1,5 @@
 .modal_closed {
-    display: flex;
     visibility: hidden;
+    pointer-events:none;
     opacity: 0;
-    transition: visibility 0.5s, opacity 0.5s ease-in-out;
 }
