final for submition

--- a/src/blocks/element/__like-btn/element__like-btn.css
+++ b/src/blocks/element/__like-btn/element__like-btn.css
@@ -2,9 +2,9 @@
     align-self: center;
     margin-right: 18px;
     background-color: transparent;
+    background-position: center;
     border: none;
     cursor: pointer; 
-
 }
 .element__like-btn:hover {
     opacity: 0.5;
