--- a/src/blocks/element/__delete/element__delete.css
+++ b/src/blocks/element/__delete/element__delete.css
@@ -3,13 +3,13 @@
     height: 19px;
     width: 21px;
     background-color:transparent;
+    background-image:url("..//../../images/Trash.png");
     position: absolute;
     right: 15px;
     top: 18px;
     border: none;
     cursor: pointer;
     filter: drop-shadow(2px 2px 5px rgba(0 0 0 / 0.8));
-
 }
 .element__delete:hover{
     opacity: 0.6;
