--- a/src/blocks/element/__like-btn/_active/element__like-btn_active.css
+++ b/src/blocks/element/__like-btn/_active/element__like-btn_active.css
@@ -1,6 +1,5 @@
 .element__like-btn_active{
-    background-image: url(../black-like.svg);
+    background-image: url(..//../../../images/black-like.svg);
     background-repeat: no-repeat;
     background-position: center;
-  
 }
