--- a/src/blocks/modal/__close-btn/modal__close-btn.css
+++ b/src/blocks/modal/__close-btn/modal__close-btn.css
@@ -15,6 +15,7 @@
 .modal__close-btn:hover {
     opacity: 0.6;
     transition: 0.3s;
+    z-index: 0;
 }
 @media screen and (max-width: 580px) {
     .modal__close-btn {
