--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,13 +1,20 @@
 .profile__avatar {
-    max-width: 120px;
-    border-radius: 50%;
-    margin-right: 30px;
+  position: absolute;
+  border-radius: 50%;
+  margin-right: 30px;
+  width: 120px;
+  height: 120px;
+  z-index: 0;
+  background-size: cover;
+}
+.profile__avatar:hover {
+  opacity: 0.3;
+  transition: 0.3s;
 }
 
 @media screen and (max-width: 765px) {
-
-    .profile__avatar {
-        margin-bottom: 26px;
-        align-self: center;
-    }
+  .profile__avatar {
+    margin-bottom: 26px;
+    align-self: center;
+  }
 }
