--- a/src/blocks/element/__description/element__description.css
+++ b/src/blocks/element/__description/element__description.css
@@ -1,5 +1,6 @@
 .element__description {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
     background-color: white;
