--- a/src/blocks/element/__like-btn/element__like-btn.css
+++ b/src/blocks/element/__like-btn/element__like-btn.css
@@ -1,15 +1,17 @@
 .element__like-btn {
-    align-self: center;
-    /* margin-right: 18px; */
-    margin: 0px;
-    margin-bottom: 22px;
-    background-color: transparent;
-    background-position: center;
-    border: none;
-    cursor: pointer; 
-
+  background-image: url("../../../images/like-btn.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  align-self: center;
+  background-color: transparent;
+  background-position: center;
+  border: none;
+  cursor: pointer;
+  height: 19px;
+  width: 21px;
 }
+
 .element__like-btn:hover {
-    opacity: 0.5;
-    transition: 0.2s;
+  opacity: 0.5;
+  transition: 0.2s;
 }
