--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -46,3 +46,4 @@
 @import url("..//blocks/form/__submit-btn/form__change-picture.css");
 @import url("../blocks/element/__like-btn/element__likes-count.css");
 @import url("..//blocks/profile/__change-avatar/profile__change-avatar.css");
+@import url("../blocks/element/__like-container/element__like-container.css");
