--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -6,10 +6,13 @@
   height: 120px;
   z-index: 0;
   background-size: cover;
+  object-fit: cover;
+  object-position: center;
 }
 .profile__avatar:hover {
   opacity: 0.3;
   transition: 0.3s;
+  z-index: 1;
 }
 
 @media screen and (max-width: 765px) {
